--- a/config/memgpt_config.yaml
+++ b/config/memgpt_config.yaml
@@ -4,6 +4,7 @@ anon_clientid: 0000000000000000000072001b73b3ea
 
 persona: sam_pov
 human: tombedor
+preset: tester
 
 default_llm_config:
   model: gpt-4
