add google cal ability, agent config

--- a/youbot/memgpt_extensions/presets/youbot.yaml
+++ b/youbot/memgpt_extensions/presets/youbot.yaml
@@ -2,6 +2,8 @@ system_prompt: "memgpt_chat_compressed"
 functions:
   - "send_message"
   - "pause_heartbeats"
+  - "core_memory_append"
+  - "core_memory_replace"
   - "conversation_search"
   - "conversation_search_date"
   - "archival_memory_insert"
@@ -9,3 +11,8 @@ functions:
   - "list_functions"
   - "add_function"
   - "debugger"
+  - "list_all_possible_functions"
+  - "reload_functions"
+  - "introspect_functions"
+  - "get_table_schema"
+  - "read_file_lines"
