--- a/youbot/memgpt_extensions/presets/youbot.yaml
+++ b/youbot/memgpt_extensions/presets/youbot.yaml
@@ -8,11 +8,9 @@ functions:
   - "conversation_search_date"
   - "archival_memory_insert"
   - "archival_memory_search"
-  - "list_functions"
   - "add_function"
-  - "debugger"
-  - "list_all_possible_functions"
   - "reload_functions"
-  - "introspect_functions"
-  - "get_table_schema"
-  - "read_file_lines"
+  - "create_list"
+  - "get_lists"
+  - "get_list_items"
+  - "remove_list_item"
