--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ discord = "^2.3.2"
 gspread = "^6.0.0"
 gcsa = "^2.2.0"
 google-auth = "^2.27.0"
+celery = {extras = ["redis"], version = "^5.3.6"}
 
 
 
