add emphemeral agents + init gmail

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ gcsa = "^2.2.0"
 google-auth = "^2.27.0"
 celery = {extras = ["redis"], version = "^5.3.6"}
 langchain-openai = "^0.0.5"
+simplegmail = "^4.1.1"
 
 
 
