--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ pgvector = "^0.2.4"
 tiktoken = "^0.5.1"
 psycopg2-binary = "^2.9.9"
 pymemgpt = {extras = ["postgres"], git = 'https://github.com/tombedor/MemGPT.git', branch='main'}
-unstructured = {extras = ["all-docs"], version = "^0.11.2"}
+unstructured = "^0.12.4"
 markdown = "^3.5.1"
 elasticsearch = "^8.11.0"
 git-python = "^1.0.3"
