--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ pyright = "^1.1.350"
 black = "^24.2.0"
 llama-index-vector-stores-faiss = "^0.1.2"
 matplotlib = "^3.8.3"
+autoflake = "^2.3.0"
 
 
 [tool.pyright]
