--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ black = "^24.2.0"
 llama-index-vector-stores-faiss = "^0.1.2"
 matplotlib = "^3.8.3"
 autoflake = "^2.3.0"
+spacy = "^3.7.4"
 
 
 [tool.pyright]
