--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ autoflake = "^2.3.0"
 spacy = "^3.7.4"
 bertopic = "^0.16.0"
 scikit-learn = "^1.4.1.post1"
+spacy-llm = "^0.7.1"
 
 
 [tool.pyright]
