--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,8 @@ bertopic = "^0.16.0"
 scikit-learn = "^1.4.1.post1"
 spacy-llm = "^0.7.1"
 llm = "^0.13.1"
+datasets = "^2.18.0"
+peft = "^0.9.0"
 
 
 [tool.pyright]
