--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ spacy-llm = "^0.7.1"
 llm = "^0.13.1"
 datasets = "^2.18.0"
 peft = "^0.9.0"
+deptry = "^0.15.0"
 
 
 [tool.pyright]
@@ -72,6 +73,7 @@ target-version = ['py310', 'py311']
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.26.0"
+black = "^24.3.0"
 
 [build-system]
 requires = ["poetry-core"]
