--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ llm = "^0.13.1"
 datasets = "^2.18.0"
 peft = "^0.9.0"
 deptry = "^0.15.0"
+flask = "^3.0.2"
+twilio = "^9.0.3"
 
 
 [tool.pyright]
