--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-langchain = "^0.0.340"
 pgvector = "^0.2.4"
 tiktoken = "^0.5.1"
 psycopg2-binary = "^2.9.9"
@@ -15,43 +14,14 @@ pymemgpt = {extras = ["postgres"], git = 'https://github.com/tombedor/MemGPT.git
 unstructured = "^0.12.4"
 markdown = "^3.5.1"
 elasticsearch = "^8.11.0"
-git-python = "^1.0.3"
-gitpython = "^3.1.40"
-langchainhub = "^0.1.14"
-faiss-cpu = "^1.7.4"
-docker = "^6.1.3"
 diskcache = "^5.6.3"
-# pyautogen = {extras = ["mathchat"], version = "^0.2.1"}
-feedparser = "^6.0.11"
 nbconvert = "^7.13.1"
-astunparse = "^1.6.3"
-llama-hub = "^0.0.71"
-numpy = "^1.26.3"
 sqlalchemy = "^2.0.25"
 discord = "^2.3.2"
-gspread = "^6.0.0"
-gcsa = "^2.2.0"
-google-auth = "^2.27.0"
 celery = {extras = ["redis"], version = "^5.3.6"}
-langchain-openai = "^0.0.5"
-simplegmail = "^4.1.1"
-pyright = "^1.1.350"
-black = "^24.2.0"
-llama-index-vector-stores-faiss = "^0.1.2"
-matplotlib = "^3.8.3"
-autoflake = "^2.3.0"
-spacy = "^3.7.4"
-bertopic = "^0.16.0"
-scikit-learn = "^1.4.1.post1"
-spacy-llm = "^0.7.1"
-llm = "^0.13.1"
-datasets = "^2.18.0"
-peft = "^0.9.0"
-deptry = "^0.15.0"
 flask = "^3.0.2"
 twilio = "^9.0.3"
 gunicorn = "^21.2.0"
-
 
 [tool.pyright]
 include = [
@@ -77,6 +47,35 @@ target-version = ['py310', 'py311']
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.26.0"
 black = "^24.3.0"
+autoflake = "^2.3.0"
+pyright = "^1.1.350"
+
+[tool.poetry.group.experiment.dependencies]
+langchain-openai = "^0.0.5"
+langchain = "^0.0.340"
+langchainhub = "^0.1.14"
+gcsa = "^2.2.0"
+google-auth = "^2.27.0"
+deptry = "^0.15.0"
+git-python = "^1.0.3"
+gitpython = "^3.1.40"
+faiss-cpu = "^1.7.4"
+docker = "^6.1.3"
+feedparser = "^6.0.11"
+llama-hub = "^0.0.71"
+numpy = "^1.26.3"
+spacy = "^3.7.4"
+bertopic = "^0.16.0"
+scikit-learn = "^1.4.1.post1"
+spacy-llm = "^0.7.1"
+llm = "^0.13.1"
+datasets = "^2.18.0"
+peft = "^0.9.0"
+simplegmail = "^4.1.1"
+gspread = "^6.0.0"
+matplotlib = "^3.8.3"
+llama-index-vector-stores-faiss = "^0.1.2"
+
 
 [build-system]
 requires = ["poetry-core"]
