--- a/requirements.txt
+++ b/requirements.txt
@@ -14,15 +14,13 @@ backoff==2.2.1 ; python_version >= "3.11" and python_version < "3.12"
 bcrypt==4.1.2 ; python_version >= "3.11" and python_version < "3.12"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "3.12"
 billiard==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
-bleach==6.1.0 ; python_version >= "3.11" and python_version < "3.12"
 blinker==1.7.0 ; python_version >= "3.11" and python_version < "3.12"
 bs4==0.0.2 ; python_version >= "3.11" and python_version < "3.12"
 build==1.2.1 ; python_version >= "3.11" and python_version < "3.12"
 cachetools==5.3.3 ; python_version >= "3.11" and python_version < "3.12"
 celery[redis]==5.3.6 ; python_version >= "3.11" and python_version < "3.12"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "3.12"
-cffi==1.16.0 ; python_version >= "3.11" and python_version < "3.12" and (implementation_name == "pypy" or platform_python_implementation != "PyPy")
-chardet==5.2.0 ; python_version >= "3.11" and python_version < "3.12"
+cffi==1.16.0 ; python_version >= "3.11" and python_version < "3.12" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "3.12"
 chroma-hnswlib==0.7.3 ; python_version >= "3.11" and python_version < "3.12"
 chromadb==0.4.24 ; python_version >= "3.11" and python_version < "3.12"
@@ -35,24 +33,17 @@ coloredlogs==15.0.1 ; python_version >= "3.11" and python_version < "3.12"
 cryptography==42.0.5 ; python_version >= "3.11" and python_version < "3.12"
 dataclasses-json==0.6.4 ; python_version >= "3.11" and python_version < "3.12"
 decorator==5.1.1 ; python_version >= "3.11" and python_version < "3.12"
-defusedxml==0.7.1 ; python_version >= "3.11" and python_version < "3.12"
 demjson3==3.0.6 ; python_version >= "3.11" and python_version < "3.12"
 deprecated==1.2.14 ; python_version >= "3.11" and python_version < "3.12"
 deprecation==2.1.0 ; python_version >= "3.11" and python_version < "3.12"
 dirtyjson==1.0.8 ; python_version >= "3.11" and python_version < "3.12"
 discord-py==2.3.2 ; python_version >= "3.11" and python_version < "3.12"
 discord==2.3.2 ; python_version >= "3.11" and python_version < "3.12"
-diskcache==5.6.3 ; python_version >= "3.11" and python_version < "3.12"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "3.12"
 docstring-parser==0.15 ; python_version >= "3.11" and python_version < "3.12"
 docx2txt==0.8 ; python_version >= "3.11" and python_version < "3.12"
-elastic-transport==8.13.0 ; python_version >= "3.11" and python_version < "3.12"
-elasticsearch==8.13.0 ; python_version >= "3.11" and python_version < "3.12"
-emoji==2.11.0 ; python_version >= "3.11" and python_version < "3.12"
 fastapi==0.110.1 ; python_version >= "3.11" and python_version < "3.12"
-fastjsonschema==2.19.1 ; python_version >= "3.11" and python_version < "3.12"
 filelock==3.13.4 ; python_version >= "3.11" and python_version < "3.12"
-filetype==1.2.0 ; python_version >= "3.11" and python_version < "3.12"
 flask==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
 flatbuffers==24.3.25 ; python_version >= "3.11" and python_version < "3.12"
 frozenlist==1.4.1 ; python_version >= "3.11" and python_version < "3.12"
@@ -75,16 +66,9 @@ importlib-resources==6.4.0 ; python_version >= "3.11" and python_version < "3.12
 itsdangerous==2.1.2 ; python_version >= "3.11" and python_version < "3.12"
 jinja2==3.1.3 ; python_version >= "3.11" and python_version < "3.12"
 joblib==1.4.0 ; python_version >= "3.11" and python_version < "3.12"
-jsonpath-python==1.0.6 ; python_version >= "3.11" and python_version < "3.12"
-jsonschema-specifications==2023.12.1 ; python_version >= "3.11" and python_version < "3.12"
-jsonschema==4.21.1 ; python_version >= "3.11" and python_version < "3.12"
-jupyter-client==8.6.1 ; python_version >= "3.11" and python_version < "3.12"
-jupyter-core==5.7.2 ; python_version >= "3.11" and python_version < "3.12"
-jupyterlab-pygments==0.3.0 ; python_version >= "3.11" and python_version < "3.12"
 kombu==5.3.6 ; python_version >= "3.11" and python_version < "3.12"
 kubernetes==29.0.0 ; python_version >= "3.11" and python_version < "3.12"
 lancedb==0.3.6 ; python_version >= "3.11" and python_version < "3.12"
-langdetect==1.0.9 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-agent-openai==0.1.7 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-core==0.10.28 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-embeddings-azure-openai==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
@@ -101,13 +85,11 @@ llama-index-readers-llama-parse==0.1.4 ; python_version >= "3.11" and python_ver
 llama-index==0.10.9 ; python_version >= "3.11" and python_version < "3.12"
 llama-parse==0.4.0 ; python_version >= "3.11" and python_version < "3.12"
 llamaindex-py-client==0.1.16 ; python_version >= "3.11" and python_version < "3.12"
-lxml==5.2.1 ; python_version >= "3.11" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "3.12"
 markdown==3.6 ; python_version >= "3.11" and python_version < "3.12"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "3.12"
 marshmallow==3.21.1 ; python_version >= "3.11" and python_version < "3.12"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "3.12"
-mistune==3.0.2 ; python_version >= "3.11" and python_version < "3.12"
 mmh3==4.1.0 ; python_version >= "3.11" and python_version < "3.12"
 monotonic==1.6 ; python_version >= "3.11" and python_version < "3.12"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "3.12"
@@ -115,9 +97,6 @@ msal-extensions==1.1.0 ; python_version >= "3.11" and python_version < "3.12"
 msal==1.28.0 ; python_version >= "3.11" and python_version < "3.12"
 multidict==6.0.5 ; python_version >= "3.11" and python_version < "3.12"
 mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "3.12"
-nbclient==0.10.0 ; python_version >= "3.11" and python_version < "3.12"
-nbconvert==7.16.3 ; python_version >= "3.11" and python_version < "3.12"
-nbformat==5.10.4 ; python_version >= "3.11" and python_version < "3.12"
 nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "3.12"
 networkx==3.3 ; python_version >= "3.11" and python_version < "3.12"
 nltk==3.8.1 ; python_version >= "3.11" and python_version < "3.12"
@@ -139,11 +118,9 @@ orjson==3.10.0 ; python_version >= "3.11" and python_version < "3.12"
 overrides==7.7.0 ; python_version >= "3.11" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.11" and python_version < "3.12"
 pandas==2.2.2 ; python_version >= "3.11" and python_version < "3.12"
-pandocfilters==1.5.1 ; python_version >= "3.11" and python_version < "3.12"
 pg8000==1.31.1 ; python_version >= "3.11" and python_version < "3.12"
 pgvector==0.2.5 ; python_version >= "3.11" and python_version < "3.12"
 pillow==10.3.0 ; python_version >= "3.11" and python_version < "3.12"
-platformdirs==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 portalocker==2.8.2 ; python_version >= "3.11" and python_version < "3.12"
 posthog==3.5.0 ; python_version >= "3.11" and python_version < "3.12"
 prettytable==3.10.0 ; python_version >= "3.11" and python_version < "3.12"
@@ -155,7 +132,7 @@ py==1.11.0 ; python_version >= "3.11" and python_version < "3.12"
 pyarrow==15.0.2 ; python_version >= "3.11" and python_version < "3.12"
 pyasn1-modules==0.4.0 ; python_version >= "3.11" and python_version < "3.12"
 pyasn1==0.6.0 ; python_version >= "3.11" and python_version < "3.12"
-pycparser==2.22 ; python_version >= "3.11" and python_version < "3.12" and (implementation_name == "pypy" or platform_python_implementation != "PyPy")
+pycparser==2.22 ; python_version >= "3.11" and python_version < "3.12" and platform_python_implementation != "PyPy"
 pydantic-core==2.16.3 ; python_version >= "3.11" and python_version < "3.12"
 pydantic==2.6.4 ; python_version >= "3.11" and python_version < "3.12"
 pygments==2.17.2 ; python_version >= "3.11" and python_version < "3.12"
@@ -172,23 +149,17 @@ pyreadline3==3.4.1 ; sys_platform == "win32" and python_version >= "3.11" and py
 python-box==7.1.1 ; python_version >= "3.11" and python_version < "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "3.12"
 python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "3.12"
-python-iso639==2024.2.7 ; python_version >= "3.11" and python_version < "3.12"
-python-magic==0.4.27 ; python_version >= "3.11" and python_version < "3.12"
 pytz==2023.4 ; python_version >= "3.11" and python_version < "3.12"
-pywin32==306 ; python_version >= "3.11" and python_version < "3.12" and (sys_platform == "win32" or platform_system == "Windows") and (platform_python_implementation != "PyPy" or platform_system == "Windows")
+pywin32==306 ; python_version >= "3.11" and python_version < "3.12" and platform_system == "Windows"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "3.12"
-pyzmq==25.1.2 ; python_version >= "3.11" and python_version < "3.12"
 questionary==2.0.1 ; python_version >= "3.11" and python_version < "3.12"
-rapidfuzz==3.8.1 ; python_version >= "3.11" and python_version < "3.12"
 ratelimiter==1.2.0.post0 ; python_version >= "3.11" and python_version < "3.12"
 redis==5.0.3 ; python_version >= "3.11" and python_version < "3.12"
-referencing==0.34.0 ; python_version >= "3.11" and python_version < "3.12"
 regex==2023.12.25 ; python_version >= "3.11" and python_version < "3.12"
 requests-oauthlib==2.0.0 ; python_version >= "3.11" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "3.12"
 retry==0.9.2 ; python_version >= "3.11" and python_version < "3.12"
 rich==13.7.1 ; python_version >= "3.11" and python_version < "3.12"
-rpds-py==0.18.0 ; python_version >= "3.11" and python_version < "3.12"
 rsa==4.9 ; python_version >= "3.11" and python_version < "3.12"
 scramp==1.4.4 ; python_version >= "3.11" and python_version < "3.12"
 semver==3.0.2 ; python_version >= "3.11" and python_version < "3.12"
@@ -203,29 +174,22 @@ sqlalchemy[asyncio]==2.0.29 ; python_version >= "3.11" and python_version < "3.1
 sqlmodel==0.0.16 ; python_version >= "3.11" and python_version < "3.12"
 starlette==0.37.2 ; python_version >= "3.11" and python_version < "3.12"
 sympy==1.12 ; python_version >= "3.11" and python_version < "3.12"
-tabulate==0.9.0 ; python_version >= "3.11" and python_version < "3.12"
 tenacity==8.2.3 ; python_version >= "3.11" and python_version < "3.12"
 tiktoken==0.5.2 ; python_version >= "3.11" and python_version < "3.12"
-tinycss2==1.2.1 ; python_version >= "3.11" and python_version < "3.12"
 tokenizers==0.15.2 ; python_version >= "3.11" and python_version < "3.12"
-tornado==6.4 ; python_version >= "3.11" and python_version < "3.12"
 tqdm==4.66.2 ; python_version >= "3.11" and python_version < "3.12"
-traitlets==5.14.2 ; python_version >= "3.11" and python_version < "3.12"
 twilio==9.0.4 ; python_version >= "3.11" and python_version < "3.12"
 typer==0.9.4 ; python_version >= "3.11" and python_version < "3.12"
 typer[all]==0.9.4 ; python_version >= "3.11" and python_version < "3.12"
 typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "3.12"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "3.12"
 tzdata==2024.1 ; python_version >= "3.11" and python_version < "3.12"
-unstructured-client==0.21.0 ; python_version >= "3.11" and python_version < "3.12"
-unstructured==0.12.5 ; python_version >= "3.11" and python_version < "3.12"
 urllib3==2.2.1 ; python_version >= "3.11" and python_version < "3.12"
 uvicorn[standard]==0.29.0 ; python_version >= "3.11" and python_version < "3.12"
 uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.11" and python_version < "3.12"
 vine==5.1.0 ; python_version >= "3.11" and python_version < "3.12"
 watchfiles==0.21.0 ; python_version >= "3.11" and python_version < "3.12"
 wcwidth==0.2.13 ; python_version >= "3.11" and python_version < "3.12"
-webencodings==0.5.1 ; python_version >= "3.11" and python_version < "3.12"
 websocket-client==1.7.0 ; python_version >= "3.11" and python_version < "3.12"
 websockets==12.0 ; python_version >= "3.11" and python_version < "3.12"
 werkzeug==3.0.2 ; python_version >= "3.11" and python_version < "3.12"
