conform to DO database env var

--- a/config/memgpt_config_backup.yaml
+++ b/config/memgpt_config_backup.yaml
@@ -22,6 +22,6 @@ default_embedding_config:
 
 
 storage_type: postgres
-storage_uri_env: POSTGRES_URL
+storage_uri_env: DATABASE_URL
 
 memgpt_version: 0.2.12
