--- a/youbot/service/do_functions/project.yml
+++ b/youbot/service/do_functions/project.yml
@@ -1,7 +1,8 @@
 packages:
     - name: youbot_site
       shared: false
-      environment: {}
+      environment:
+        DATABASE_URL: ${DATABASE_URL}
       parameters: {}
       annotations: {}
       functions:
@@ -10,7 +11,7 @@ packages:
           main: ""
           runtime: python:default
           web: true
-          webSecure: true
+          # webSecure: SECRET_VALUE
           parameters: {}
           environment: {}
           annotations: {}
@@ -20,7 +21,7 @@ packages:
           main: ""
           runtime: python:default
           web: true
-          webSecure: true
+          # webSecure: SECRET_VALUE
           parameters: {}
           environment: {}
           annotations: {}
