template env var

--- a/youbot/service/do_functions/project.yml
+++ b/youbot/service/do_functions/project.yml
@@ -2,7 +2,7 @@ packages:
     - name: youbot_site
       shared: false
       environment:
-        DATABASE_URL: ${DATABASE_URL}
+        DATABASE_URL: "${DATABASE_URL}"
       parameters: {}
       annotations: {}
       functions:
