--- a/youbot/service/do_functions/project.yml
+++ b/youbot/service/do_functions/project.yml
@@ -1,7 +1,7 @@
 packages:
     - name: youbot_site
       shared: false
-      environment: {} # DATABASE_URL: "${DATABASE_URL}" doesn't work, why?
+      environment: {}
       parameters: {}
       annotations: {}
       functions:
