--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ black = "^24.3.0"
 autoflake = "^2.3.0"
 pyright = "^1.1.350"
 pytest = "^8.1.1"
+memray = "^1.12.0"
 
 [tool.poetry.group.experiment.dependencies]
 tiktoken = "^0.5.1"
