--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,58 @@
 aiohttp-retry==2.8.3 ; python_version >= "3.11" and python_version < "3.12"
-aiohttp==3.9.3 ; python_version >= "3.11" and python_version < "3.12"
+aiohttp==3.9.5 ; python_version >= "3.11" and python_version < "3.12"
 aiosignal==1.3.1 ; python_version >= "3.11" and python_version < "3.12"
 amqp==5.2.0 ; python_version >= "3.11" and python_version < "3.12"
 annotated-types==0.6.0 ; python_version >= "3.11" and python_version < "3.12"
 anyio==3.7.1 ; python_version >= "3.11" and python_version < "3.12"
-asgiref==3.8.1 ; python_version >= "3.11" and python_version < "3.12"
 asn1crypto==1.5.1 ; python_version >= "3.11" and python_version < "3.12"
 async-timeout==4.0.3 ; python_version >= "3.11" and python_full_version < "3.11.3"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "3.12"
 azure-core==1.30.1 ; python_version >= "3.11" and python_version < "3.12"
 azure-identity==1.16.0 ; python_version >= "3.11" and python_version < "3.12"
-backoff==2.2.1 ; python_version >= "3.11" and python_version < "3.12"
-bcrypt==4.1.2 ; python_version >= "3.11" and python_version < "3.12"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "3.12"
 billiard==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 blinker==1.7.0 ; python_version >= "3.11" and python_version < "3.12"
 bs4==0.0.2 ; python_version >= "3.11" and python_version < "3.12"
-build==1.2.1 ; python_version >= "3.11" and python_version < "3.12"
-cachetools==5.3.3 ; python_version >= "3.11" and python_version < "3.12"
-celery[redis]==5.3.6 ; python_version >= "3.11" and python_version < "3.12"
+celery[redis]==5.4.0 ; python_version >= "3.11" and python_version < "3.12"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "3.12"
 cffi==1.16.0 ; python_version >= "3.11" and python_version < "3.12" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "3.12"
-chroma-hnswlib==0.7.3 ; python_version >= "3.11" and python_version < "3.12"
-chromadb==0.4.24 ; python_version >= "3.11" and python_version < "3.12"
 click-didyoumean==0.3.1 ; python_version >= "3.11" and python_version < "3.12"
 click-plugins==1.1.1 ; python_version >= "3.11" and python_version < "3.12"
 click-repl==0.3.0 ; python_version >= "3.11" and python_version < "3.12"
 click==8.1.7 ; python_version >= "3.11" and python_version < "3.12"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12"
-coloredlogs==15.0.1 ; python_version >= "3.11" and python_version < "3.12"
 cryptography==42.0.5 ; python_version >= "3.11" and python_version < "3.12"
 dataclasses-json==0.6.4 ; python_version >= "3.11" and python_version < "3.12"
-decorator==5.1.1 ; python_version >= "3.11" and python_version < "3.12"
 demjson3==3.0.6 ; python_version >= "3.11" and python_version < "3.12"
 deprecated==1.2.14 ; python_version >= "3.11" and python_version < "3.12"
-deprecation==2.1.0 ; python_version >= "3.11" and python_version < "3.12"
 dirtyjson==1.0.8 ; python_version >= "3.11" and python_version < "3.12"
 discord-py==2.3.2 ; python_version >= "3.11" and python_version < "3.12"
 discord==2.3.2 ; python_version >= "3.11" and python_version < "3.12"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "3.12"
 docstring-parser==0.15 ; python_version >= "3.11" and python_version < "3.12"
 docx2txt==0.8 ; python_version >= "3.11" and python_version < "3.12"
-fastapi==0.110.1 ; python_version >= "3.11" and python_version < "3.12"
-filelock==3.13.4 ; python_version >= "3.11" and python_version < "3.12"
 flask==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
-flatbuffers==24.3.25 ; python_version >= "3.11" and python_version < "3.12"
 frozenlist==1.4.1 ; python_version >= "3.11" and python_version < "3.12"
 fsspec==2024.2.0 ; python_version >= "3.11" and python_version < "3.12"
-google-auth==2.29.0 ; python_version >= "3.11" and python_version < "3.12"
-googleapis-common-protos==1.63.0 ; python_version >= "3.11" and python_version < "3.12"
 greenlet==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
-grpcio==1.62.1 ; python_version >= "3.11" and python_version < "3.12"
 gunicorn==21.2.0 ; python_version >= "3.11" and python_version < "3.12"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "3.12"
 html2text==2020.1.16 ; python_version >= "3.11" and python_version < "3.12"
 httpcore==1.0.5 ; python_version >= "3.11" and python_version < "3.12"
-httptools==0.6.1 ; python_version >= "3.11" and python_version < "3.12"
 httpx==0.25.2 ; python_version >= "3.11" and python_version < "3.12"
-huggingface-hub==0.22.2 ; python_version >= "3.11" and python_version < "3.12"
-humanfriendly==10.0 ; python_version >= "3.11" and python_version < "3.12"
-idna==3.6 ; python_version >= "3.11" and python_version < "3.12"
-importlib-metadata==7.0.0 ; python_version >= "3.11" and python_version < "3.12"
-importlib-resources==6.4.0 ; python_version >= "3.11" and python_version < "3.12"
-itsdangerous==2.1.2 ; python_version >= "3.11" and python_version < "3.12"
+idna==3.7 ; python_version >= "3.11" and python_version < "3.12"
+itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "3.12"
 jinja2==3.1.3 ; python_version >= "3.11" and python_version < "3.12"
 joblib==1.4.0 ; python_version >= "3.11" and python_version < "3.12"
-kombu==5.3.6 ; python_version >= "3.11" and python_version < "3.12"
-kubernetes==29.0.0 ; python_version >= "3.11" and python_version < "3.12"
-lancedb==0.3.6 ; python_version >= "3.11" and python_version < "3.12"
+kombu==5.3.7 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-agent-openai==0.1.7 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-core==0.10.28 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-embeddings-azure-openai==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-core==0.10.30 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-embeddings-azure-openai==0.1.7 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-embeddings-openai==0.1.7 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-indices-managed-llama-cloud==0.1.5 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-legacy==0.9.48 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-llms-azure-openai==0.1.5 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-llms-azure-openai==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-llms-openai==0.1.15 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-multi-modal-llms-openai==0.1.5 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-program-openai==0.1.5 ; python_version >= "3.11" and python_version < "3.12"
@@ -83,16 +60,13 @@ llama-index-question-gen-openai==0.1.3 ; python_version >= "3.11" and python_ver
 llama-index-readers-file==0.1.1 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-readers-llama-parse==0.1.4 ; python_version >= "3.11" and python_version < "3.12"
 llama-index==0.10.9 ; python_version >= "3.11" and python_version < "3.12"
-llama-parse==0.4.0 ; python_version >= "3.11" and python_version < "3.12"
-llamaindex-py-client==0.1.16 ; python_version >= "3.11" and python_version < "3.12"
+llama-parse==0.4.1 ; python_version >= "3.11" and python_version < "3.12"
+llamaindex-py-client==0.1.18 ; python_version >= "3.11" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "3.12"
 markdown==3.6 ; python_version >= "3.11" and python_version < "3.12"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "3.12"
 marshmallow==3.21.1 ; python_version >= "3.11" and python_version < "3.12"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "3.12"
-mmh3==4.1.0 ; python_version >= "3.11" and python_version < "3.12"
-monotonic==1.6 ; python_version >= "3.11" and python_version < "3.12"
-mpmath==1.3.0 ; python_version >= "3.11" and python_version < "3.12"
 msal-extensions==1.1.0 ; python_version >= "3.11" and python_version < "3.12"
 msal==1.28.0 ; python_version >= "3.11" and python_version < "3.12"
 multidict==6.0.5 ; python_version >= "3.11" and python_version < "3.12"
@@ -101,68 +75,37 @@ nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "3.12"
 networkx==3.3 ; python_version >= "3.11" and python_version < "3.12"
 nltk==3.8.1 ; python_version >= "3.11" and python_version < "3.12"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "3.12"
-oauthlib==3.2.2 ; python_version >= "3.11" and python_version < "3.12"
-onnxruntime==1.17.1 ; python_version >= "3.11" and python_version < "3.12"
-openai==1.17.0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-api==1.24.0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-exporter-otlp-proto-common==1.24.0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-exporter-otlp-proto-grpc==1.24.0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-instrumentation-asgi==0.45b0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-instrumentation-fastapi==0.45b0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-instrumentation==0.45b0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-proto==1.24.0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-sdk==1.24.0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-semantic-conventions==0.45b0 ; python_version >= "3.11" and python_version < "3.12"
-opentelemetry-util-http==0.45b0 ; python_version >= "3.11" and python_version < "3.12"
-orjson==3.10.0 ; python_version >= "3.11" and python_version < "3.12"
-overrides==7.7.0 ; python_version >= "3.11" and python_version < "3.12"
+openai==1.23.1 ; python_version >= "3.11" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.11" and python_version < "3.12"
 pandas==2.2.2 ; python_version >= "3.11" and python_version < "3.12"
 pg8000==1.31.1 ; python_version >= "3.11" and python_version < "3.12"
 pgvector==0.2.5 ; python_version >= "3.11" and python_version < "3.12"
 pillow==10.3.0 ; python_version >= "3.11" and python_version < "3.12"
 portalocker==2.8.2 ; python_version >= "3.11" and python_version < "3.12"
-posthog==3.5.0 ; python_version >= "3.11" and python_version < "3.12"
 prettytable==3.10.0 ; python_version >= "3.11" and python_version < "3.12"
 prompt-toolkit==3.0.36 ; python_version >= "3.11" and python_version < "3.12"
-protobuf==4.25.3 ; python_version >= "3.11" and python_version < "3.12"
 psycopg2-binary==2.9.9 ; python_version >= "3.11" and python_version < "3.12"
-pulsar-client==3.4.0 ; python_version >= "3.11" and python_version < "3.12"
-py==1.11.0 ; python_version >= "3.11" and python_version < "3.12"
-pyarrow==15.0.2 ; python_version >= "3.11" and python_version < "3.12"
-pyasn1-modules==0.4.0 ; python_version >= "3.11" and python_version < "3.12"
-pyasn1==0.6.0 ; python_version >= "3.11" and python_version < "3.12"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "3.12" and platform_python_implementation != "PyPy"
-pydantic-core==2.16.3 ; python_version >= "3.11" and python_version < "3.12"
-pydantic==2.6.4 ; python_version >= "3.11" and python_version < "3.12"
+pydantic-core==2.18.1 ; python_version >= "3.11" and python_version < "3.12"
+pydantic==2.7.0 ; python_version >= "3.11" and python_version < "3.12"
 pygments==2.17.2 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt[crypto]==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
-pylance==0.8.21 ; python_version >= "3.11" and python_version < "3.12"
-pymemgpt[postgres] @ git+https://github.com/tombedor/MemGPT.git@main ; python_version >= "3.11" and python_version < "3.12"
-pymupdf==1.24.1 ; python_version >= "3.11" and python_version < "3.12"
+pymemgpt[postgres] @ git+https://github.com/tombedor/MemGPT.git@skinny ; python_version >= "3.11" and python_version < "3.12"
+pymupdf==1.24.2 ; python_version >= "3.11" and python_version < "3.12"
 pymupdfb==1.24.1 ; python_version >= "3.11" and python_version < "3.12"
 pypdf==3.17.4 ; python_version >= "3.11" and python_version < "3.12"
-pypika==0.48.9 ; python_version >= "3.11" and python_version < "3.12"
-pyproject-hooks==1.0.0 ; python_version >= "3.11" and python_version < "3.12"
-pyreadline3==3.4.1 ; sys_platform == "win32" and python_version >= "3.11" and python_version < "3.12"
 python-box==7.1.1 ; python_version >= "3.11" and python_version < "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "3.12"
-python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "3.12"
 pytz==2023.4 ; python_version >= "3.11" and python_version < "3.12"
 pywin32==306 ; python_version >= "3.11" and python_version < "3.12" and platform_system == "Windows"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "3.12"
 questionary==2.0.1 ; python_version >= "3.11" and python_version < "3.12"
-ratelimiter==1.2.0.post0 ; python_version >= "3.11" and python_version < "3.12"
 redis==5.0.3 ; python_version >= "3.11" and python_version < "3.12"
-regex==2023.12.25 ; python_version >= "3.11" and python_version < "3.12"
-requests-oauthlib==2.0.0 ; python_version >= "3.11" and python_version < "3.12"
+regex==2024.4.16 ; python_version >= "3.11" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "3.12"
-retry==0.9.2 ; python_version >= "3.11" and python_version < "3.12"
 rich==13.7.1 ; python_version >= "3.11" and python_version < "3.12"
-rsa==4.9 ; python_version >= "3.11" and python_version < "3.12"
-scramp==1.4.4 ; python_version >= "3.11" and python_version < "3.12"
-semver==3.0.2 ; python_version >= "3.11" and python_version < "3.12"
+scramp==1.4.5 ; python_version >= "3.11" and python_version < "3.12"
 setuptools==68.2.2 ; python_version >= "3.11" and python_version < "3.12"
 shellingham==1.5.4 ; python_version >= "3.11" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.11" and python_version < "3.12"
@@ -172,27 +115,17 @@ sqlalchemy-json==0.7.0 ; python_version >= "3.11" and python_version < "3.12"
 sqlalchemy==2.0.29 ; python_version >= "3.11" and python_version < "3.12"
 sqlalchemy[asyncio]==2.0.29 ; python_version >= "3.11" and python_version < "3.12"
 sqlmodel==0.0.16 ; python_version >= "3.11" and python_version < "3.12"
-starlette==0.37.2 ; python_version >= "3.11" and python_version < "3.12"
-sympy==1.12 ; python_version >= "3.11" and python_version < "3.12"
 tenacity==8.2.3 ; python_version >= "3.11" and python_version < "3.12"
 tiktoken==0.5.2 ; python_version >= "3.11" and python_version < "3.12"
-tokenizers==0.15.2 ; python_version >= "3.11" and python_version < "3.12"
 tqdm==4.66.2 ; python_version >= "3.11" and python_version < "3.12"
-twilio==9.0.4 ; python_version >= "3.11" and python_version < "3.12"
-typer==0.9.4 ; python_version >= "3.11" and python_version < "3.12"
+twilio==9.0.5 ; python_version >= "3.11" and python_version < "3.12"
 typer[all]==0.9.4 ; python_version >= "3.11" and python_version < "3.12"
 typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "3.12"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "3.12"
 tzdata==2024.1 ; python_version >= "3.11" and python_version < "3.12"
 urllib3==2.2.1 ; python_version >= "3.11" and python_version < "3.12"
-uvicorn[standard]==0.29.0 ; python_version >= "3.11" and python_version < "3.12"
-uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.11" and python_version < "3.12"
 vine==5.1.0 ; python_version >= "3.11" and python_version < "3.12"
-watchfiles==0.21.0 ; python_version >= "3.11" and python_version < "3.12"
 wcwidth==0.2.13 ; python_version >= "3.11" and python_version < "3.12"
-websocket-client==1.7.0 ; python_version >= "3.11" and python_version < "3.12"
-websockets==12.0 ; python_version >= "3.11" and python_version < "3.12"
 werkzeug==3.0.2 ; python_version >= "3.11" and python_version < "3.12"
 wrapt==1.16.0 ; python_version >= "3.11" and python_version < "3.12"
 yarl==1.9.4 ; python_version >= "3.11" and python_version < "3.12"
-zipp==3.18.1 ; python_version >= "3.11" and python_version < "3.12"
