--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ discord==2.3.2 ; python_version >= "3.11" and python_version < "3.12"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "3.12"
 docstring-parser==0.15 ; python_version >= "3.11" and python_version < "3.12"
 docx2txt==0.8 ; python_version >= "3.11" and python_version < "3.12"
+fastapi==0.110.2 ; python_version >= "3.11" and python_version < "3.12"
 flask==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
 frozenlist==1.4.1 ; python_version >= "3.11" and python_version < "3.12"
 fsspec==2024.3.1 ; python_version >= "3.11" and python_version < "3.12"
@@ -115,6 +116,7 @@ sqlalchemy-json==0.7.0 ; python_version >= "3.11" and python_version < "3.12"
 sqlalchemy==2.0.29 ; python_version >= "3.11" and python_version < "3.12"
 sqlalchemy[asyncio]==2.0.29 ; python_version >= "3.11" and python_version < "3.12"
 sqlmodel==0.0.16 ; python_version >= "3.11" and python_version < "3.12"
+starlette==0.37.2 ; python_version >= "3.11" and python_version < "3.12"
 tenacity==8.2.3 ; python_version >= "3.11" and python_version < "3.12"
 tiktoken==0.5.2 ; python_version >= "3.11" and python_version < "3.12"
 tqdm==4.66.2 ; python_version >= "3.11" and python_version < "3.12"
