--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,11 +26,22 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "script/dev_container_setup.sh"
+	"postCreateCommand": "script/dev_container_setup.sh",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
+
+	"remoteEnv": {
+		"DATABASE_URL": "postgresql://youbot:youbot@localhost/youbot",
+		"POSTGRES_URL": "postgresql://youbot:youbot@localhost/youbot",
+		"REDIS_URL": "redis://127.0.0.1:6379/0",
+		"MEMGPT_CONFIG_PATH": "/workspaces/youbot/config/memgpt_config",
+		"TWILIO_ACCOUNT_SID": "123",
+		"TWILIO_AUTH_TOKEN": "456",
+		"TWILIO_SENDER_NUMBER": "+1234567890",
+		"USER_FUNCTIONS_DIR": "/workspaces/youbot/youbot/memgpt_extensions/functions"
+	}
 }
