--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ target-version = ['py310', 'py311']
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.26.0"
-black = "^24.3.0"
+black = {extras = ["jupyter"], version = "^24.4.2"}
 autoflake = "^2.3.0"
 pyright = "^1.1.350"
 pytest = "^8.1.1"
@@ -76,6 +76,15 @@ simplegmail = "^4.1.1"
 gspread = "^6.0.0"
 matplotlib = "^3.8.3"
 llama-index-vector-stores-faiss = "^0.1.2"
+pyvis = "^0.3.2"
+ipywidgets = "^8.1.2"
+jupyter = "^1.0.0"
+safetensors = "^0.4.3"
+outlines = "^0.0.40"
+torch = "^2.3.0"
+sentencepiece = "^0.2.0"
+llama-cpp-python = "^0.2.69"
+pygls = "^1.3.1"
 
 
 [build-system]
