put project on main branch of memgpt fork

--- a/requirements.txt
+++ b/requirements.txt
@@ -92,7 +92,7 @@ pydantic==2.7.0 ; python_version >= "3.11" and python_version < "3.12"
 pygments==2.17.2 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt[crypto]==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
-pymemgpt[postgres] @ git+https://github.com/tombedor/MemGPT.git@skinny ; python_version >= "3.11" and python_version < "3.12"
+pymemgpt[postgres] @ git+https://github.com/tombedor/MemGPT.git@main; python_version >= "3.11" and python_version < "3.12"
 pymupdf==1.24.2 ; python_version >= "3.11" and python_version < "3.12"
 pymupdfb==1.24.1 ; python_version >= "3.11" and python_version < "3.12"
 pypdf==3.17.4 ; python_version >= "3.11" and python_version < "3.12"
