--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ flask = "^3.0.2"
 twilio = "^9.0.3"
 gunicorn = "^21.2.0"
 fastapi = "^0.110.2"
+sentencepiece = "^0.2.0"
 
 [tool.pyright]
 include = [
