--- a/youbot/experiments/kb_1_from_guide/config.cfg
+++ b/youbot/experiments/kb_1_from_guide/config.cfg
@@ -18,7 +18,9 @@ factory = "llm"
 labels = ["work for", "founder of", "headquarters in", "lives in", "associated with", "attendees of", "organizer of"]
 
 [components.llm_rel.model]
-@llm_models = "spacy.GPT-4.v2"
+@llm_models = "spacy.Dolly.v1"
+# For better performance, use dolly-v2-12b instead
+name = "dolly-v2-3b"
 
 [initialize]
 vectors = "en_core_web_md"
