--- a/youbot/experiments/kb_3_from_archival_graph/config.cfg
+++ b/youbot/experiments/kb_3_from_archival_graph/config.cfg
@@ -16,8 +16,10 @@ factory = "llm"
 @llm_tasks = "spacy.REL.v1"
 labels = ["is a romantic partner of", "works for", "is owner of", "lives in", "happened on", "attendees of", "organizer of", "works on"]
 
-[components.llm_rel.model]
-@llm_models = "spacy.GPT-4.v2"
+# [components.llm_rel.model]
+# # @llm_models = "spacy.GPT-4.v2"
+# @llm_models = "spacy.Dolly.v1"
+# name = "dolly-v2-3b"
 
 [initialize]
 vectors = "en_core_web_md"
