--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,8 @@ gspread = "^6.0.0"
 matplotlib = "^3.8.3"
 llama-index-vector-stores-faiss = "^0.1.2"
 pyvis = "^0.3.2"
+ipywidgets = "^8.1.2"
+jupyter = "^1.0.0"
 
 
 [build-system]
