--- a/youbot/experiments/kb_1_from_guide/config.cfg
+++ b/youbot/experiments/kb_1_from_guide/config.cfg
@@ -15,7 +15,7 @@ factory = "llm"
 
 [components.llm_rel.task]
 @llm_tasks = "spacy.REL.v1"
-labels = ["work for", "founder of", "headquarters in", "lives in", "associated with", "attendees of", "organizer of"]
+labels = ["is employed by", "founder of", "lives in", "organizer of", "occurred on", "is partner of"]
 
 # [components.llm_rel.model]
 # @llm_models = "spacy.Dolly.v1"
