--- a/youbot/experiments/kb_3_from_archival_graph/config.cfg
+++ b/youbot/experiments/kb_3_from_archival_graph/config.cfg
@@ -14,7 +14,7 @@ factory = "llm"
 
 [components.llm_rel.task]
 @llm_tasks = "spacy.REL.v1"
-labels = ["is a romantic partner of", "is employed by", "is pet owner of", "lives in", "happened on", "works on", "is a friend of"]
+labels = ["is a romantic partner of", "is employed by", "is pet owner of", "lives in", "works on", "is a friend of"]
 
 # [components.llm_rel.model]
 # # @llm_models = "spacy.GPT-4.v2"
