reorg experiment files

--- a/youbot/experiments/knowledge_base/3_from_archival_graph/config.cfg
+++ b/youbot/experiments/knowledge_base/3_from_archival_graph/config.cfg
@@ -16,10 +16,16 @@ factory = "llm"
 @llm_tasks = "spacy.REL.v1"
 labels = ["is a romantic partner of", "is employed by", "is pet owner of", "lives in", "works on", "is a friend of"]
 
-# [components.llm_rel.model]
-# # @llm_models = "spacy.GPT-4.v2"
-# @llm_models = "spacy.Dolly.v1"
-# name = "dolly-v2-3b"
+[components.llm_rel.model]
+# @llm_models = "spacy.GPT-4.v2"
+@llm_models = "spacy.Dolly.v1"
+name = "dolly-v2-3b"
+# config_init = {"offload_folder": "/tmp"}
+config_init = {"offload_folder": "/Users/tombedor/Development/youbot/.cache/"}
+
+# [components.llm_rel.model.config_init]
+# offload_folder = "/tmp"
+
 
 [initialize]
 vectors = "en_core_web_md"
