--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ llama-index-vector-stores-faiss = "^0.1.2"
 pyvis = "^0.3.2"
 ipywidgets = "^8.1.2"
 jupyter = "^1.0.0"
+safetensors = "^0.4.3"
 
 
 [build-system]
