--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ autoflake = "^2.3.0"
 pyright = "^1.1.350"
 pytest = "^8.1.1"
 memray = "^1.12.0"
+pygls = "^1.3.1"
+spacy = "^3.7.4"
 
 [tool.poetry.group.experiment.dependencies]
 tiktoken = "^0.5.1"
