--- a/youbot/experiments/knowledge_base/6_collab/6.cfg
+++ b/youbot/experiments/knowledge_base/6_collab/6.cfg
@@ -11,7 +11,6 @@ factory="llm"
 [components.llm_ner.task]
 @llm_tasks = "spacy.NER.v3"
 labels = ["PERSON", "ORG", "GPE", "LOC", "PRODUCT", "EVENT", "WORK_OF_ART", "DATE", "TIME", "PERCENT", "MONEY", "QUANTITY", "ORDINAL", "CARDINAL", "PET", "TECHNICAL_CONCEPT"]
-
 [components.llm_rel]
 factory = "llm"
 
@@ -19,8 +18,9 @@ factory = "llm"
 @llm_tasks = "spacy.REL.v1"
 labels = ["is a romantic partner of", "is employed by", "is pet owner of", "lives in", "works on", "is a friend of", "has duration", "is a relative of"]
 
-# [components.llm_ner.model]
-# @llm_models = "spacy.GPT-4.v2"
+
+[components.llm_ner.model]
+@llm_models = "spacy.GPT-4.v2"
 # @llm_models = "spacy.Mistral.v1"
 # name = "Mistral-7B-Instruct-v0.1"
 
