--- a/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.cfg
+++ b/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.cfg
@@ -1,23 +1,17 @@
 
 [nlp]
 lang = "en"
-pipeline = ["llm_ner", "llm_rel"]
+pipeline = ["ner", "llm_rel"]
 
 [components]
 
-[components.llm_ner]
-factory="llm"
-
-[components.llm_ner.task]
-@llm_tasks = "spacy.NER.v3"
-# labels = ["PERSON", "ORG", "GPE", "LOC", "PRODUCT", "EVENT", "WORK_OF_ART", "DATE", "TIME", "PERCENT", "MONEY", "QUANTITY", "ORDINAL", "CARDINAL", "PET", "TECHNICAL_CONCEPT"]
-
-[components.llm_rel]
-factory = "llm"
+[components.ner]
+source = "en_core_web_md"
 
 [components.llm_rel.task]
 @llm_tasks = "spacy.REL.v1"
 labels = ["is a romantic partner of", "is employed by", "is pet owner of", "lives in", "works on", "is a friend of", "has duration", "is a relative of"]
+
 
 # [components.llm_ner.model]
 # @llm_models = "spacy.GPT-4.v2"
