--- a/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.cfg
+++ b/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.cfg
@@ -8,6 +8,9 @@ pipeline = ["ner", "llm_rel"]
 [components.ner]
 source = "en_core_web_md"
 
+[components.llm_rel]
+factory = "llm"
+
 [components.llm_rel.task]
 @llm_tasks = "spacy.REL.v1"
 labels = ["is a romantic partner of", "is employed by", "is pet owner of", "lives in", "works on", "is a friend of", "has duration", "is a relative of"]
