--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ twilio = "^9.0.3"
 gunicorn = "^21.2.0"
 fastapi = "^0.110.2"
 sentencepiece = "^0.2.0"
+llama-cpp-python = "^0.2.68"
 
 [tool.pyright]
 include = [
