--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,8 @@ click-didyoumean==0.3.1 ; python_version >= "3.11" and python_version < "3.12"
 click-plugins==1.1.1 ; python_version >= "3.11" and python_version < "3.12"
 click-repl==0.3.0 ; python_version >= "3.11" and python_version < "3.12"
 click==8.1.7 ; python_version >= "3.11" and python_version < "3.12"
-colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12" and platform_system == "Windows"
-dataclasses-json==0.6.5 ; python_version >= "3.11" and python_version < "3.12"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12"
+dataclasses-json==0.6.6 ; python_version >= "3.11" and python_version < "3.12"
 demjson3==3.0.6 ; python_version >= "3.11" and python_version < "3.12"
 deprecated==1.2.14 ; python_version >= "3.11" and python_version < "3.12"
 dirtyjson==1.0.8 ; python_version >= "3.11" and python_version < "3.12"
@@ -29,7 +29,7 @@ docstring-parser==0.15 ; python_version >= "3.11" and python_version < "3.12"
 fastapi==0.104.1 ; python_version >= "3.11" and python_version < "3.12"
 flask==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
 frozenlist==1.4.1 ; python_version >= "3.11" and python_version < "3.12"
-fsspec==2024.3.1 ; python_version >= "3.11" and python_version < "3.12"
+fsspec==2024.5.0 ; python_version >= "3.11" and python_version < "3.12"
 greenlet==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
 gunicorn==21.2.0 ; python_version >= "3.11" and python_version < "3.12"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "3.12"
@@ -40,20 +40,20 @@ itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "3.12"
 jinja2==3.1.4 ; python_version >= "3.11" and python_version < "3.12"
 joblib==1.4.2 ; python_version >= "3.11" and python_version < "3.12"
 kombu==5.3.7 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-agent-openai==0.2.4 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-agent-openai==0.2.5 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-cli==0.1.12 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-core==0.10.36 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-embeddings-openai==0.1.9 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-indices-managed-llama-cloud==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-legacy==0.9.48 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-llms-openai==0.1.18 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-multi-modal-llms-openai==0.1.5 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-llms-openai==0.1.19 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-multi-modal-llms-openai==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-program-openai==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-question-gen-openai==0.1.3 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-readers-file==0.1.22 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-readers-llama-parse==0.1.4 ; python_version >= "3.11" and python_version < "3.12"
-llama-index==0.10.36 ; python_version >= "3.11" and python_version < "3.12"
-llama-parse==0.4.2 ; python_version >= "3.11" and python_version < "3.12"
+llama-index==0.10.37 ; python_version >= "3.11" and python_version < "3.12"
+llama-parse==0.4.3 ; python_version >= "3.11" and python_version < "3.12"
 llamaindex-py-client==0.1.19 ; python_version >= "3.11" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "3.12"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "3.12"
@@ -65,7 +65,7 @@ nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "3.12"
 networkx==3.3 ; python_version >= "3.11" and python_version < "3.12"
 nltk==3.8.1 ; python_version >= "3.11" and python_version < "3.12"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "3.12"
-openai==1.28.0 ; python_version >= "3.11" and python_version < "3.12"
+openai==1.30.1 ; python_version >= "3.11" and python_version < "3.12"
 packaging==24.0 ; python_version >= "3.11" and python_version < "3.12"
 pandas==2.2.2 ; python_version >= "3.11" and python_version < "3.12"
 pg8000==1.31.2 ; python_version >= "3.11" and python_version < "3.12"
@@ -77,7 +77,7 @@ pydantic-core==2.18.2 ; python_version >= "3.11" and python_version < "3.12"
 pydantic==2.7.1 ; python_version >= "3.11" and python_version < "3.12"
 pygments==2.18.0 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
-pymemgpt @ git+https://github.com/tombedor/MemGPT.git@293c7e5b3ac6cfc625c6c329de15a87d17374887 ; python_version >= "3.11" and python_version < "3.12"
+pymemgpt @ git+https://github.com/tombedor/MemGPT.git@76193cc785dc8fc1fd340fda62a810aaed967b2f ; python_version >= "3.11" and python_version < "3.12"
 pypdf==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 python-box==7.1.1 ; python_version >= "3.11" and python_version < "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "3.12"
@@ -85,7 +85,7 @@ pytz==2023.4 ; python_version >= "3.11" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "3.12"
 questionary==2.0.1 ; python_version >= "3.11" and python_version < "3.12"
 redis==5.0.4 ; python_version >= "3.11" and python_version < "3.12"
-regex==2024.4.28 ; python_version >= "3.11" and python_version < "3.12"
+regex==2024.5.15 ; python_version >= "3.11" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "3.12"
 rich==13.7.1 ; python_version >= "3.11" and python_version < "3.12"
 scramp==1.4.5 ; python_version >= "3.11" and python_version < "3.12"
