--- a/requirements.txt
+++ b/requirements.txt
@@ -74,10 +74,11 @@ psycopg2-binary==2.9.9 ; python_version >= "3.11" and python_version < "3.12"
 pydantic-core==2.18.2 ; python_version >= "3.11" and python_version < "3.12"
 pydantic==2.7.1 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
-pymemgpt @ git+https://github.com/tombedor/MemGPT.git@bc7d1694a17d33347fc8329d821af336d6c29471 ; python_version >= "3.11" and python_version < "3.12"
+pymemgpt @ git+https://github.com/tombedor/MemGPT.git@adfc61d23feee95402b5e6ac763f0aebd74a8195 ; python_version >= "3.11" and python_version < "3.12"
 pypdf==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 python-box==7.1.1 ; python_version >= "3.11" and python_version < "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "3.12"
+python-redis-cache==3.2.0 ; python_version >= "3.11" and python_version < "3.12"
 pytz==2023.4 ; python_version >= "3.11" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "3.12"
 questionary==2.0.1 ; python_version >= "3.11" and python_version < "3.12"
@@ -96,7 +97,7 @@ sqlmodel==0.0.16 ; python_version >= "3.11" and python_version < "3.12"
 starlette==0.27.0 ; python_version >= "3.11" and python_version < "3.12"
 striprtf==0.0.26 ; python_version >= "3.11" and python_version < "3.12"
 tenacity==8.3.0 ; python_version >= "3.11" and python_version < "3.12"
-tiktoken==0.5.2 ; python_version >= "3.11" and python_version < "3.12"
+tiktoken==0.7.0 ; python_version >= "3.11" and python_version < "3.12"
 tqdm==4.66.4 ; python_version >= "3.11" and python_version < "3.12"
 twilio==9.0.5 ; python_version >= "3.11" and python_version < "3.12"
 typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "3.12"
