--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ attrs==23.2.0 ; python_version >= "3.11" and python_version < "3.12"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "3.12"
 billiard==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 blinker==1.8.2 ; python_version >= "3.11" and python_version < "3.12"
+blis==0.7.11 ; python_version >= "3.11" and python_version < "3.12"
+catalogue==2.0.10 ; python_version >= "3.11" and python_version < "3.12"
 celery[redis]==5.4.0 ; python_version >= "3.11" and python_version < "3.12"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "3.12"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "3.12"
@@ -17,7 +19,10 @@ click-didyoumean==0.3.1 ; python_version >= "3.11" and python_version < "3.12"
 click-plugins==1.1.1 ; python_version >= "3.11" and python_version < "3.12"
 click-repl==0.3.0 ; python_version >= "3.11" and python_version < "3.12"
 click==8.1.7 ; python_version >= "3.11" and python_version < "3.12"
-colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12" and platform_system == "Windows"
+cloudpathlib==0.16.0 ; python_version >= "3.11" and python_version < "3.12"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12" and (platform_system == "Windows" or sys_platform == "win32")
+confection==0.1.4 ; python_version >= "3.11" and python_version < "3.12"
+cymem==2.0.8 ; python_version >= "3.11" and python_version < "3.12"
 dataclasses-json==0.6.6 ; python_version >= "3.11" and python_version < "3.12"
 demjson3==3.0.6 ; python_version >= "3.11" and python_version < "3.12"
 deprecated==1.2.14 ; python_version >= "3.11" and python_version < "3.12"
@@ -40,6 +45,8 @@ itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "3.12"
 jinja2==3.1.4 ; python_version >= "3.11" and python_version < "3.12"
 joblib==1.4.2 ; python_version >= "3.11" and python_version < "3.12"
 kombu==5.3.7 ; python_version >= "3.11" and python_version < "3.12"
+langcodes==3.4.0 ; python_version >= "3.11" and python_version < "3.12"
+language-data==1.2.0 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-agent-openai==0.2.5 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-cli==0.1.12 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-core==0.10.38.post2 ; python_version >= "3.11" and python_version < "3.12"
@@ -55,9 +62,11 @@ llama-index-readers-llama-parse==0.1.4 ; python_version >= "3.11" and python_ver
 llama-index==0.10.38 ; python_version >= "3.11" and python_version < "3.12"
 llama-parse==0.4.3 ; python_version >= "3.11" and python_version < "3.12"
 llamaindex-py-client==0.1.19 ; python_version >= "3.11" and python_version < "3.12"
+marisa-trie==1.1.1 ; python_version >= "3.11" and python_version < "3.12"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "3.12"
 marshmallow==3.21.2 ; python_version >= "3.11" and python_version < "3.12"
 multidict==6.0.5 ; python_version >= "3.11" and python_version < "3.12"
+murmurhash==1.0.10 ; python_version >= "3.11" and python_version < "3.12"
 mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "3.12"
 nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "3.12"
 networkx==3.3 ; python_version >= "3.11" and python_version < "3.12"
@@ -69,6 +78,7 @@ pandas==2.2.2 ; python_version >= "3.11" and python_version < "3.12"
 pg8000==1.31.2 ; python_version >= "3.11" and python_version < "3.12"
 pgvector==0.2.5 ; python_version >= "3.11" and python_version < "3.12"
 pillow==10.3.0 ; python_version >= "3.11" and python_version < "3.12"
+preshed==3.0.9 ; python_version >= "3.11" and python_version < "3.12"
 prompt-toolkit==3.0.36 ; python_version >= "3.11" and python_version < "3.12"
 psycopg2-binary==2.9.9 ; python_version >= "3.11" and python_version < "3.12"
 pydantic-core==2.18.2 ; python_version >= "3.11" and python_version < "3.12"
@@ -88,24 +98,33 @@ requests==2.32.2 ; python_version >= "3.11" and python_version < "3.12"
 scramp==1.4.5 ; python_version >= "3.11" and python_version < "3.12"
 setuptools==68.2.2 ; python_version >= "3.11" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.11" and python_version < "3.12"
+smart-open==6.4.0 ; python_version >= "3.11" and python_version < "3.12"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "3.12"
 soupsieve==2.5 ; python_version >= "3.11" and python_version < "3.12"
+spacy-legacy==3.0.12 ; python_version >= "3.11" and python_version < "3.12"
+spacy-loggers==1.0.5 ; python_version >= "3.11" and python_version < "3.12"
+spacy==3.7.4 ; python_version >= "3.11" and python_version < "3.12"
 sqlalchemy-json==0.7.0 ; python_version >= "3.11" and python_version < "3.12"
 sqlalchemy==2.0.30 ; python_version >= "3.11" and python_version < "3.12"
 sqlalchemy[asyncio]==2.0.30 ; python_version >= "3.11" and python_version < "3.12"
 sqlmodel==0.0.16 ; python_version >= "3.11" and python_version < "3.12"
+srsly==2.4.8 ; python_version >= "3.11" and python_version < "3.12"
 starlette==0.27.0 ; python_version >= "3.11" and python_version < "3.12"
 striprtf==0.0.26 ; python_version >= "3.11" and python_version < "3.12"
 tenacity==8.3.0 ; python_version >= "3.11" and python_version < "3.12"
+thinc==8.2.3 ; python_version >= "3.11" and python_version < "3.12"
 tiktoken==0.7.0 ; python_version >= "3.11" and python_version < "3.12"
 tqdm==4.66.4 ; python_version >= "3.11" and python_version < "3.12"
 twilio==9.0.5 ; python_version >= "3.11" and python_version < "3.12"
+typer==0.9.4 ; python_version >= "3.11" and python_version < "3.12"
 typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "3.12"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "3.12"
 tzdata==2024.1 ; python_version >= "3.11" and python_version < "3.12"
 urllib3==2.2.1 ; python_version >= "3.11" and python_version < "3.12"
 vine==5.1.0 ; python_version >= "3.11" and python_version < "3.12"
+wasabi==1.1.2 ; python_version >= "3.11" and python_version < "3.12"
 wcwidth==0.2.13 ; python_version >= "3.11" and python_version < "3.12"
+weasel==0.3.4 ; python_version >= "3.11" and python_version < "3.12"
 werkzeug==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
 wrapt==1.16.0 ; python_version >= "3.11" and python_version < "3.12"
 yarl==1.9.4 ; python_version >= "3.11" and python_version < "3.12"
