--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,16 @@ anyio==3.7.1 ; python_version >= "3.11" and python_version < "3.12"
 asn1crypto==1.5.1 ; python_version >= "3.11" and python_version < "3.12"
 async-timeout==4.0.3 ; python_version >= "3.11" and python_full_version < "3.11.3"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "3.12"
+beautiful-date==2.3.0 ; python_version >= "3.11" and python_version < "3.12"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "3.12"
 billiard==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 blinker==1.8.2 ; python_version >= "3.11" and python_version < "3.12"
 blis==0.7.11 ; python_version >= "3.11" and python_version < "3.12"
+cachetools==5.3.3 ; python_version >= "3.11" and python_version < "3.12"
 catalogue==2.0.10 ; python_version >= "3.11" and python_version < "3.12"
 celery[redis]==5.4.0 ; python_version >= "3.11" and python_version < "3.12"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "3.12"
+cffi==1.16.0 ; python_version >= "3.11" and python_version < "3.12" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "3.12"
 click-didyoumean==0.3.1 ; python_version >= "3.11" and python_version < "3.12"
 click-plugins==1.1.1 ; python_version >= "3.11" and python_version < "3.12"
@@ -22,6 +25,7 @@ click==8.1.7 ; python_version >= "3.11" and python_version < "3.12"
 cloudpathlib==0.16.0 ; python_version >= "3.11" and python_version < "3.12"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12" and (platform_system == "Windows" or sys_platform == "win32")
 confection==0.1.4 ; python_version >= "3.11" and python_version < "3.12"
+cryptography==42.0.7 ; python_version >= "3.11" and python_version < "3.12"
 cymem==2.0.8 ; python_version >= "3.11" and python_version < "3.12"
 dataclasses-json==0.6.6 ; python_version >= "3.11" and python_version < "3.12"
 demjson3==3.0.6 ; python_version >= "3.11" and python_version < "3.12"
@@ -35,10 +39,18 @@ fastapi==0.104.1 ; python_version >= "3.11" and python_version < "3.12"
 flask==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
 frozenlist==1.4.1 ; python_version >= "3.11" and python_version < "3.12"
 fsspec==2024.5.0 ; python_version >= "3.11" and python_version < "3.12"
+gcsa==2.3.0 ; python_version >= "3.11" and python_version < "3.12"
+google-api-core==2.19.0 ; python_version >= "3.11" and python_version < "3.12"
+google-api-python-client==2.131.0 ; python_version >= "3.11" and python_version < "3.12"
+google-auth-httplib2==0.2.0 ; python_version >= "3.11" and python_version < "3.12"
+google-auth-oauthlib==1.2.0 ; python_version >= "3.11" and python_version < "3.12"
+google-auth==2.29.0 ; python_version >= "3.11" and python_version < "3.12"
+googleapis-common-protos==1.63.0 ; python_version >= "3.11" and python_version < "3.12"
 greenlet==3.0.3 ; python_version >= "3.11" and python_version < "3.12"
 gunicorn==21.2.0 ; python_version >= "3.11" and python_version < "3.12"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "3.12"
 httpcore==1.0.5 ; python_version >= "3.11" and python_version < "3.12"
+httplib2==0.22.0 ; python_version >= "3.11" and python_version < "3.12"
 httpx==0.25.2 ; python_version >= "3.11" and python_version < "3.12"
 idna==3.7 ; python_version >= "3.11" and python_version < "3.12"
 itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "3.12"
@@ -72,6 +84,7 @@ nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "3.12"
 networkx==3.3 ; python_version >= "3.11" and python_version < "3.12"
 nltk==3.8.1 ; python_version >= "3.11" and python_version < "3.12"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "3.12"
+oauthlib==3.2.2 ; python_version >= "3.11" and python_version < "3.12"
 openai==1.30.2 ; python_version >= "3.11" and python_version < "3.12"
 packaging==24.0 ; python_version >= "3.11" and python_version < "3.12"
 pandas==2.2.2 ; python_version >= "3.11" and python_version < "3.12"
@@ -80,21 +93,30 @@ pgvector==0.2.5 ; python_version >= "3.11" and python_version < "3.12"
 pillow==10.3.0 ; python_version >= "3.11" and python_version < "3.12"
 preshed==3.0.9 ; python_version >= "3.11" and python_version < "3.12"
 prompt-toolkit==3.0.36 ; python_version >= "3.11" and python_version < "3.12"
+proto-plus==1.23.0 ; python_version >= "3.11" and python_version < "3.12"
+protobuf==4.25.3 ; python_version >= "3.11" and python_version < "3.12"
 psycopg2-binary==2.9.9 ; python_version >= "3.11" and python_version < "3.12"
+pyasn1-modules==0.4.0 ; python_version >= "3.11" and python_version < "3.12"
+pyasn1==0.6.0 ; python_version >= "3.11" and python_version < "3.12"
+pycparser==2.22 ; python_version >= "3.11" and python_version < "3.12" and platform_python_implementation != "PyPy"
 pydantic-core==2.18.2 ; python_version >= "3.11" and python_version < "3.12"
 pydantic==2.7.1 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
 pymemgpt @ git+https://github.com/tombedor/MemGPT.git@1b7115418bcd5b2b180378dd57d486065da708d0 ; python_version >= "3.11" and python_version < "3.12"
+pyparsing==3.1.2 ; python_version >= "3.11" and python_version < "3.12"
 pypdf==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 python-box==7.1.1 ; python_version >= "3.11" and python_version < "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "3.12"
 python-redis-cache==3.2.0 ; python_version >= "3.11" and python_version < "3.12"
+pytz-deprecation-shim==0.1.0.post0 ; python_version >= "3.11" and python_version < "3.12"
 pytz==2023.4 ; python_version >= "3.11" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "3.12"
 questionary==2.0.1 ; python_version >= "3.11" and python_version < "3.12"
 redis==5.0.4 ; python_version >= "3.11" and python_version < "3.12"
 regex==2024.5.15 ; python_version >= "3.11" and python_version < "3.12"
+requests-oauthlib==2.0.0 ; python_version >= "3.11" and python_version < "3.12"
 requests==2.32.2 ; python_version >= "3.11" and python_version < "3.12"
+rsa==4.9 ; python_version >= "3.11" and python_version < "3.12"
 scramp==1.4.5 ; python_version >= "3.11" and python_version < "3.12"
 setuptools==68.2.2 ; python_version >= "3.11" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.11" and python_version < "3.12"
@@ -120,6 +142,8 @@ typer==0.9.4 ; python_version >= "3.11" and python_version < "3.12"
 typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "3.12"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "3.12"
 tzdata==2024.1 ; python_version >= "3.11" and python_version < "3.12"
+tzlocal==4.3.1 ; python_version >= "3.11" and python_version < "3.12"
+uritemplate==4.1.1 ; python_version >= "3.11" and python_version < "3.12"
 urllib3==2.2.1 ; python_version >= "3.11" and python_version < "3.12"
 vine==5.1.0 ; python_version >= "3.11" and python_version < "3.12"
 wasabi==1.1.2 ; python_version >= "3.11" and python_version < "3.12"
