--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,8 @@ readme = "README.md"
 python = ">=3.11,<3.12"
 pgvector = "^0.2.4"
 psycopg2-binary = "^2.9.9"
-pymemgpt = {git = 'https://github.com/tombedor/MemGPT.git', rev='1b7115418bcd5b2b180378dd57d486065da708d0'}
+pymemgpt = {git = 'https://github.com/tombedor/MemGPT.git', rev='2c161a7b4a61f6345e02bc0b586dcbcb2b6e7450'}
 sqlalchemy = "^2.0.29"
-discord = "^2.3.2"
 celery = {extras = ["redis"], version = "^5.4.0"}
 flask = "^3.0.2"
 twilio = "^9.0.3"
@@ -21,9 +20,15 @@ questionary = "^2.0.1"
 requests = "^2.32.2"
 python-redis-cache = "^3.2.0"
 tiktoken = "^0.7.0"
-spacy = "^3.7.4"
 cryptography = "^42.0.7"
 gcsa = "^2.3.0"
+gspread = "^6.1.2"
+
+# technically only needed for CLI, but adding as prod dep for now.
+python-dotenv = "^1.0.1"
+colorama = "^0.4.6"
+rich = "^13.7.1"
+toolz = "^0.12.1"
 
 [tool.pyright]
 include = [
@@ -47,17 +52,13 @@ line-length = 140
 target-version = ['py310', 'py311']
 
 [tool.poetry.group.dev.dependencies]
-colorama = "^0.4.6"
 ipykernel = "^6.26.0"
 black = {extras = ["jupyter"], version = "^24.4.2"}
 autoflake = "^2.3.0"
 pyright = "^1.1.350"
 pytest = "^8.1.1"
 fawltydeps = "^0.15.0"
-spacy-llm = "^0.7.2"
-rich = "^13.7.1"
 typer = ">=0.3.0,<0.10.0"
-python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
